--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,110 @@
+body, html, #home{
+    height: 100%
+}
+
 body{
     background: url('../imagens/capa.png'), url('../imagens/ruido.png'), linear-gradient(50deg, #ff4169, #7c26f8);
     background-attachment: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav.navbar-transparent{
+    background: rgba(0,0,0,0.6);
+    padding: 15px 0px; 
+}
+
+.navbar-light .navbar-nav .nav-link{
+    color: white
+}
+
+.navbar-light .navbar-nav .nav-link:hover{
+    color: #9bf0e1
+}
+
+.navbar-light .navbar-toggler{
+    color: rgba(0,0,0,0.5);
+    border-color: rgba(255,255,255,.1);
+}
+
+.divisor{
+   width: 1px;
+   background: white;
+   margin: 12px 15px;
+}
+
+.capa{
+    text-align: center;
+}
+
+.btn-roxo{
+    background: #7c25f8;
+}
+
+.btn-roxo:hover{
+    background: #6207e3;
+    color: white;
+}
+
+.btn-branco{
+    border: 2px solid #ffffff
+}
+
+.btn-branco:hover{
+    background: #ffffff;
+    color: #000000;
+}
+
+.btn-custom{
+    color: #ffffff;
+    border-radius: 500px;
+    --webkit-border-radius: 500px;
+    --moz-border-radius: 500px;
+    text-transform: uppercase;
+    transition: background 0.4s, color 0.4s;
+    padding: 10px 20px
+}
+
+h1{
+    font-weight: 900;
+    letter-spacing: -0.05em;
+    margin-bottom: 50px;
+    color: #ffffff
+}
+
+@media (max-width: 575.98px){
+    .btn-custom{
+        margin: 10px 15px;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px){
+    h1{
+        font-size: 3em;
+    }
+
+    .btn-custom{
+        margin: 10px 15px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px){
+    h1{
+        font-size: 4em;
+    }
+
+    .btn-custom{
+        margin: 10px 15px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px){
+    h1{
+        font-size: 5em;
+    }
+}
+
+@media(min-width: 1200px){
+    h1{
+        font-size: 6em;
+    }
 }
